kubernetesDeploymentandServices/kuberesources/gateway/gatewayclassfornginx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginxgateway-class
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
